# Roborace-Dreams

./: README.md  brovkalog.mat
Info_Roborace/: Info.docx
cmake/: customthirdparty.cmake  internaldeps.cmake  options.cmake  splitargn.cmake
data/cars/categories/: 36GP.xml  67GP.xml  CMakeLists.txt  LS-P1.xml  MP1.xml  MP10.xml  MPA1.xml  Nascar.xml  RS.xml  Raid-T1.xml  Roborace.xml  Supercars.xml
data/cars/models/: CMakeLists.txt
data/cars/models/36gp-century-r11b/: 36gp-century-r11b.xcf.bz2  36gp-century-r11b.xml
data/cars/models/36gp-ettore-t59/: 36gp-ettore-t59.xcf.bz2  36gp-ettore-t59.xml
data/cars/models/36gp-milano-12c36/: 36gp-milano-12c36.xcf.bz2  36gp-milano-12c36.xml
data/cars/models/36gp-milano-tipop3/: 36gp-milano-tipop3.xml
data/cars/models/36gp-motorunion-typec/: 36gp-motorunion-typec.xcf.bz2  36gp-motorunion-typec.xml
data/cars/models/36gp-silber-w25b/: 36gp-silber-w25b.xml
data/cars/models/36gp-tridenti-6c34/: 36gp-tridenti-6c34.xcf.bz2  36gp-tridenti-6c34.xml
data/cars/models/36gp-tridenti-v8ri/: 36gp-tridenti-v8ri.xcf.bz2  36gp-tridenti-v8ri.xml
data/cars/models/67gp-upping-ut19/: 67gp-upping-ut19-src.ac  67gp-upping-ut19.acc  (+42 more)
data/config/: graph.xml  logging.xml  raceengine.xml  raceresults.xsl  screen.xml  sound.xml  webserver.xml
data/config/raceman/: career-36GP.xml  career-supercars.xml  career_36GP.xmls  career_MPA1.xmls  career_ls1.xmls  career_supercars.xmls  championship-supercars.xml  championship-trb1.xml  championship.xml  networkrace.xml  optimizationMT.xml  practice.xml  quickrace.xml  singleevent-challenge.xml  singleevent-endurance.xml
data/data/: credits.xml
data/data/img/: mouse.xcf.bz2
data/data/menu/: aiconfigmenu.xml  carselectionmenu.xml  carsettingsmenu.xml  controlconfigmenu.xml  creditsmenu.xml  displayconfigmenu.xml  driverselectmenu.xml  exitmenu.xml  fileselectmenu.xml  garagemenu.xml  graphicsconfigmenu.xml  helpmenu.xml  hostsettingsmenu.xml  joystickconfigmenu.xml  loadingscreen.xml  mainmenu.xml  mouseconfigmenu.xml  networkclientconnectmenu.xml  networkclientmenu.xml  networkhostmenu.xml  networkmenu.xml  networkwaitconnectmenu.xml  opengloptionsmenu.xml  optionsmenu.xml  pitmenu.xml  playerconfigmenu.xml  practiceresultsmenu.xml  qualifsresultsmenu.xml  raceblindscreen.xml  raceglscreen.xml  racemanmenu.xml  racenexteventmenu.xml  raceparamsmenu.xml  raceresultsmenu.xml  raceselectmenu.xml  simuconfigmenu.xml  soundconfigmenu.xml  standingsmenu.xml  startracemenu.xml  stopracemenu.xml  (+1 more)
data/data/tracks/: circuit.xml  development.xml  dirt.xml  gprix.xml  objects.xml  physics.xml  road.xml  speedway.xml  surfaces.xml
data/drivers/: CMakeLists.txt
data/drivers/K1999/: CMakeLists.txt  K1999.xml
data/drivers/bt/: CMakeLists.txt  bt.xml
data/drivers/dandroid_36GP/: CMakeLists.txt  dandroid_36GP.xml
data/drivers/dandroid_67GP/: CMakeLists.txt  dandroid_67GP.xml  default.xml
data/drivers/dandroid_lp1/: CMakeLists.txt  dandroid_lp1.xml
data/drivers/dandroid_ls1/: CMakeLists.txt  dandroid_ls1.xml
data/drivers/dandroid_ls2/: CMakeLists.txt  dandroid_ls2.xml  default.xml
data/drivers/dandroid_mpa1/: CMakeLists.txt  dandroid_mpa1.xml
data/drivers/dandroid_mpa11/: CMakeLists.txt  dandroid_mpa11.xml
data/drivers/dandroid_mpa12/: CMakeLists.txt  dandroid_mpa12.xml  default.xml
data/drivers/dandroid_rs/: CMakeLists.txt  dandroid_rs.xml
data/drivers/dandroid_srw/: CMakeLists.txt  dandroid_srw.xml  default.xml
data/drivers/dandroid_trb1/: CMakeLists.txt  dandroid_trb1.xml
data/drivers/human/: car.xml  preferences.xml
data/drivers/hymie/: CMakeLists.txt  hymie.xml
data/drivers/kilo2008/: CMakeLists.txt  kilo2008.xml
data/drivers/networkhuman/: car.xml  preferences.xml
data/drivers/shadow_67GP/: CMakeLists.txt  default.xml  shadow_67GP.xml
data/drivers/shadow_mpa1/: CMakeLists.txt  default.xml  shadow_mpa1.xml
data/drivers/shadow_mpa11/: CMakeLists.txt  shadow_mpa11.xml
data/drivers/shadow_mpa12/: CMakeLists.txt  shadow_mpa12.xml
data/drivers/shadow_sc/: CMakeLists.txt  shadow_sc.xml
data/drivers/simplix_36GP/: simplix_36GP.xml
data/drivers/simplix_lp1/: CMakeLists.txt  default.xml  simplix_lp1.xml
data/drivers/simplix_ls1/: default.xml  simplix_ls1.xml
data/drivers/simplix_ls2/: default.xml  simplix_ls2.xml
data/drivers/simplix_mp5/: default.xml  simplix_mp5.xml
data/drivers/simplix_mpa11/: CMakeLists.txt  default.xml  simplix_mpa11.xml
data/drivers/simplix_mpa12/: CMakeLists.txt  default.xml  simplix_mpa12.xml
data/drivers/simplix_ref/: CMakeLists.txt  default.xml  readme.txt  simplix_ref.xml
data/drivers/simplix_srw/: CMakeLists.txt  default.xml  simplix_srw.xml
data/drivers/simplix_trb1/: simplix_trb1.xml
data/drivers/udp_36GP/: CMakeLists.txt  default.xml  udp_36GP.xml
data/drivers/udp_Roborace/: CMakeLists.txt  default.xml  udp_Roborace.xml
data/drivers/usr_36GP/: usr_36GP.xml
data/drivers/usr_lp1/: CMakeLists.txt  usr_lp1.xml
data/drivers/usr_ls1/: usr_ls1.xml
data/drivers/usr_ls2/: usr_ls2.xml
data/drivers/usr_mpa11/: CMakeLists.txt  default.xml  usr_mpa11.xml
data/drivers/usr_mpa12/: CMakeLists.txt  default.xml  usr_mpa12.xml
data/drivers/usr_trb1/: default.xml  usr_trb1.xml
data/tracks/development/: CMakeLists.txt
doc/roborace/: udp_interface.slx
packaging/3rdParty-devel/: CMakeLists.txt
packaging/OSX/: Info.plist
packaging/windows/: speed-dreams-base.nsi  speed-dreams-hq-cars-and-tracks.nsi  speed-dreams-more-hq-cars-and-tracks.nsi  speed-dreams-unmaintained.nsi  speed-dreams-wip-cars-and-tracks.nsi  speed-dreams.nsh
src/drivers/: CMakeLists.txt
src/drivers/human/: CMakeLists.txt  human.cpp
src/drivers/networkhuman/: networkhuman.cpp
src/drivers/shadow/: CMakeLists.txt
src/drivers/udp/: CMakeLists.txt
src/interfaces/: car.h  raceman.h
src/libs/learning/: policy.cpp
src/libs/tgf/: params.cpp  tgf.h  tgf.hpp
src/libs/tgfclient/: control.cpp  guiscreen.cpp  openalmusicplayer.cpp  tgfclient.h
src/modules/networking/: server.cpp
src/tools/scripts/: check_skins.sh
src/tools/trackgen/: track.cpp
(+1645 files in other folders)
